--- a/Diplom/AddNewGroupWindow.xaml
+++ b/Diplom/AddNewGroupWindow.xaml
@@ -15,7 +15,7 @@
             <WrapPanel HorizontalAlignment="Center" Margin="0 20">
                 <Label Content="Номер группы"/>
                 <WrapPanel Orientation="Vertical">
-                    <TextBox x:Name="tbName" MaxLength="5" Text="{Binding GroupNumber}" TextChanged="tbName_TextChanged" Margin="5"/>
+                    <TextBox x:Name="tbName" MaxLength="5" Text="{Binding GroupNumber, Mode=OneTime}" TextChanged="tbName_TextChanged" Margin="5"/>
                 </WrapPanel>
             </WrapPanel>
             <WrapPanel Orientation="Horizontal" Margin="0 10">
