--- a/Diplom/MyGroupsWindow.xaml
+++ b/Diplom/MyGroupsWindow.xaml
@@ -161,7 +161,7 @@
                                         <WrapPanel>
                                             <TextBlock Text="{Binding IfInvalid}" FontSize="12"/>
                                             <TextBlock Text=" " FontSize="12"/>
-                                            <TextBlock Text="{Binding ПричинаИнвалидности}" TextWrapping="WrapWithOverflow" FontSize="12"/>
+                                            <TextBlock Text="{Binding CauseOfDisability}" TextWrapping="WrapWithOverflow" FontSize="12"/>
                                         </WrapPanel>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
@@ -385,7 +385,7 @@
                                         <WrapPanel>
                                             <TextBlock Text="{Binding IfInvalid}" FontSize="12"/>
                                             <TextBlock Text=" " FontSize="12"/>
-                                            <TextBlock Text="{Binding ПричинаИнвалидности}" TextWrapping="WrapWithOverflow" FontSize="12"/>
+                                            <TextBlock Text="{Binding CauseOfDisability}" TextWrapping="WrapWithOverflow" FontSize="12"/>
                                         </WrapPanel>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
